LocalBlobAccess: Allow data to be stored on a block device
To reduce memory pressure and to allow storing datasets larger than
memory, this change extends LocalBlobAccess in such a way that data can
be stored on a block device. Metadata (i.e., the digest location map) is
not stored on disk, meaning that once bb-storage restarts, all data is
lost. Future work could be to optionally make this backend fully
persistent, thereby replacing CircularBlobAccess entirely.

--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -83,6 +83,7 @@ gomock(
     interfaces = [
         "Directory",
         "FileReader",
+        "FileReadWriter",
     ],
     library = "//pkg/filesystem:go_default_library",
     package = "mock",
