--- a/pkg/blobstore/local/BUILD.bazel
+++ b/pkg/blobstore/local/BUILD.bazel
@@ -12,6 +12,7 @@ go_library(
         "location.go",
         "location_record_array.go",
         "location_record_key.go",
+        "partitioning_block_allocator.go",
         "per_instance_digest_location_map.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/blobstore/local",
@@ -34,11 +35,13 @@ go_test(
         "in_memory_location_record_array_test.go",
         "local_blob_access_test.go",
         "location_record_key_test.go",
+        "partitioning_block_allocator_test.go",
         "per_instance_digest_location_map_test.go",
     ],
     embed = [":go_default_library"],
     deps = [
         "//internal/mock:go_default_library",
+        "//pkg/blobstore:go_default_library",
         "//pkg/blobstore/buffer:go_default_library",
         "//pkg/digest:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
