Allow MirroredBlobAccess to use a separate replicator daemon
When using MirroredBlobAccess on many clients that each generate a lot
of traffic, emptying out a storage server could easily lead to DDoS-like
workloads. All clients will suddently discover that one of the two
replicas has lot of data, causing a spike in replication traffic.

To mitigate this, we move the replication strategy out of
MirroredBlobAccess into its own BlobReplicator. We then add a
RemoteBlobReplicator that can forward such requests to a dedicated
bb_replicator process. This process can serialize and deduplicate
incoming replication requests.

--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -98,6 +98,14 @@ gomock(
 )
 
 gomock(
+    name = "mirrored",
+    out = "mirrored.go",
+    interfaces = ["BlobReplicator"],
+    library = "//pkg/blobstore/mirrored:go_default_library",
+    package = "mock",
+)
+
+gomock(
     name = "redis",
     out = "redis.go",
     interfaces = ["RedisClient"],
@@ -128,6 +136,7 @@ go_library(
         ":clock.go",
         ":filesystem.go",
         ":grpc.go",
+        ":mirrored.go",
         ":redis.go",
         ":remoteexecution.go",
     ],
