--- a/pkg/blobstore/mirrored/BUILD.bazel
+++ b/pkg/blobstore/mirrored/BUILD.bazel
@@ -3,48 +3,36 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 go_library(
     name = "go_default_library",
     srcs = [
-        "ac_storage_type.go",
-        "action_cache_blob_access.go",
-        "blob_access.go",
-        "cas_storage_type.go",
-        "cloud_blob_access.go",
-        "content_addressable_storage_blob_access.go",
-        "error_blob_access.go",
-        "existence_caching_blob_access.go",
-        "metrics_blob_access.go",
-        "read_caching_blob_access.go",
-        "redis_blob_access.go",
-        "remote_blob_access.go",
-        "size_distinguishing_blob_access.go",
-        "storage_type.go",
+        "blob_replicator.go",
+        "local_blob_replicator.go",
+        "mirrored_blob_access.go",
+        "queued_blob_replicator.go",
+        "remote_blob_replicator.go",
+        "replicator_server.go",
     ],
-    importpath = "github.com/buildbarn/bb-storage/pkg/blobstore",
+    importpath = "github.com/buildbarn/bb-storage/pkg/blobstore/mirrored",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/blobstore:go_default_library",
         "//pkg/blobstore/buffer:go_default_library",
-        "//pkg/clock:go_default_library",
         "//pkg/digest:go_default_library",
+        "//pkg/proto/replicator:go_default_library",
         "//pkg/util:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
-        "@com_github_go_redis_redis//:go_default_library",
-        "@com_github_google_uuid//:go_default_library",
         "@com_github_prometheus_client_golang//prometheus:go_default_library",
-        "@dev_gocloud//blob:go_default_library",
-        "@dev_gocloud//gcerrors:go_default_library",
-        "@go_googleapis//google/bytestream:bytestream_go_proto",
+        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
-        "@org_golang_x_net//context/ctxhttp:go_default_library",
     ],
 )
 
 go_test(
     name = "go_default_test",
     srcs = [
-        "existence_caching_blob_access_test.go",
-        "read_caching_blob_access_test.go",
-        "redis_blob_access_test.go",
+        "local_blob_replicator_test.go",
+        "mirrored_blob_access_test.go",
+        "queued_blob_replicator_test.go",
     ],
     embed = [":go_default_library"],
     deps = [
