--- a/pkg/ac/BUILD.bazel
+++ b/pkg/ac/BUILD.bazel
@@ -12,5 +12,6 @@ go_library(
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
+        "@io_opencensus_go//trace:go_default_library",
     ],
 )
