--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -35,6 +35,7 @@ go_library(
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
         "@org_golang_x_net//context/ctxhttp:go_default_library",
+        "@io_opencensus_go//trace:go_default_library",
     ],
 )
 
