--- a/pkg/cas/BUILD.bazel
+++ b/pkg/cas/BUILD.bazel
@@ -21,6 +21,7 @@ go_library(
         "@go_googleapis//google/bytestream:bytestream_go_proto",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
+        "@io_opencensus_go//trace:go_default_library",
     ],
 )
 
