--- a/pkg/proto/configuration/grpc/BUILD.bazel
+++ b/pkg/proto/configuration/grpc/BUILD.bazel
@@ -7,6 +7,7 @@ proto_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/proto/configuration/tls:tls_proto",
+        "@com_google_protobuf//:duration_proto",
         "@com_google_protobuf//:empty_proto",
     ],
 )
