Make completeness checking configurable as an ordinary BlobAccess
This feature was initially implemented not as an implementation of
BlobAccess. This meant that it made sense to have a boolean flag to
enable/disable this functionality.

Now that it is a BlobAccess, there is no advantage to having it as a
boolean flag. In fact, it's a disadvantage, because it means that other
bb_* binaries cannot have this functionality enabled.

--- a/pkg/blobstore/configuration/BUILD.bazel
+++ b/pkg/blobstore/configuration/BUILD.bazel
@@ -13,9 +13,11 @@ go_library(
     deps = [
         "//pkg/blobstore:go_default_library",
         "//pkg/blobstore/circular:go_default_library",
+        "//pkg/blobstore/completenesschecking:go_default_library",
         "//pkg/blobstore/local:go_default_library",
         "//pkg/blobstore/mirrored:go_default_library",
         "//pkg/blobstore/sharding:go_default_library",
+        "//pkg/cas:go_default_library",
         "//pkg/clock:go_default_library",
         "//pkg/digest:go_default_library",
         "//pkg/filesystem:go_default_library",
