Add unit testing for BatchReadBlobs
Adds a success and failure test for BatchReadBlobs

--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -39,6 +39,7 @@ gomock(
     name = "buffer",
     out = "buffer.go",
     interfaces = [
+        "Buffer",
         "ChunkReader",
         "ErrorHandler",
         "RepairFunc",
