--- a/pkg/cas/BUILD.bazel
+++ b/pkg/cas/BUILD.bazel
@@ -29,15 +29,18 @@ go_test(
     srcs = [
         "blob_access_content_addressable_storage_test.go",
         "byte_stream_server_test.go",
+        "content_addressable_storage_server_test.go",
     ],
     embed = [":go_default_library"],
     deps = [
         "//internal/mock:go_default_library",
         "//pkg/blobstore/buffer:go_default_library",
         "//pkg/digest:go_default_library",
+        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
         "@go_googleapis//google/bytestream:bytestream_go_proto",
+        "@go_googleapis//google/rpc:status_go_proto",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
