Add support for gRPC credential/metadata forwarding
This change adds a new gRPC client interceptor that copies headers from
the incoming context to the outgoing context. In other words, it
performs forwarding of headers provides by clients to other services.
There are multiple use cases for this:

- Credential forwarding: Let bb-frontend forward OAuth2 tokens to
  storage backends and the scheduler, thereby pushing authentication one
  level deeper.

- Build action inspection: Every call generated by Bazel contains some
  metadata that describes which build action triggered the call. This
  makes it possible to correlate BlobAccess calls with build actions.

- Billing: Build clients could be configured to always include certain
  headers that describe the project being built. This makes it possible
  to perform billing/accounting in multi-tenant setups.

--- a/pkg/grpc/BUILD.bazel
+++ b/pkg/grpc/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
         "authenticator.go",
         "deny_authenticator.go",
         "grpc.go",
+        "metadata_forwarding_interceptor.go",
         "tls_client_certificate_authenticator.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/grpc",
@@ -23,6 +24,7 @@ go_library(
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//credentials:go_default_library",
         "@org_golang_google_grpc//keepalive:go_default_library",
+        "@org_golang_google_grpc//metadata:go_default_library",
         "@org_golang_google_grpc//peer:go_default_library",
         "@org_golang_google_grpc//reflection:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
@@ -35,6 +37,7 @@ go_test(
         "allow_authenticator_test.go",
         "any_authenticator_test.go",
         "deny_authenticator_test.go",
+        "metadata_forwarding_interceptor_test.go",
         "tls_client_certificate_authenticator_test.go",
     ],
     embed = [":go_default_library"],
@@ -42,8 +45,11 @@ go_test(
         "//internal/mock:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
+        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
+        "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//credentials:go_default_library",
+        "@org_golang_google_grpc//metadata:go_default_library",
         "@org_golang_google_grpc//peer:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
     ],
