--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -98,6 +98,18 @@ gomock(
 )
 
 gomock(
+    name = "grpc_go",
+    out = "grpc_go.go",
+    interfaces = [
+        "ClientStream",
+        "Streamer",
+        "UnaryInvoker",
+    ],
+    library = "@org_golang_google_grpc//:go_default_library",
+    package = "mock",
+)
+
+gomock(
     name = "mirrored",
     out = "mirrored.go",
     interfaces = ["BlobReplicator"],
@@ -136,6 +148,7 @@ go_library(
         ":clock.go",
         ":filesystem.go",
         ":grpc.go",
+        ":grpc_go.go",
         ":mirrored.go",
         ":redis.go",
         ":remoteexecution.go",
@@ -154,6 +167,7 @@ go_library(
         "@com_github_go_redis_redis//:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
         "@go_googleapis//google/longrunning:longrunning_go_proto",
+        "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//metadata:go_default_library",
     ],
 )
