--- a/cmd/bb_replicator/BUILD.bazel
+++ b/cmd/bb_replicator/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
         "//pkg/blobstore/configuration:go_default_library",
         "//pkg/blobstore/mirrored:go_default_library",
         "//pkg/digest:go_default_library",
+        "//pkg/global:go_default_library",
         "//pkg/grpc:go_default_library",
         "//pkg/proto/configuration/bb_replicator:go_default_library",
         "//pkg/proto/replicator:go_default_library",
