--- a/cmd/bb_storage/BUILD.bazel
+++ b/cmd/bb_storage/BUILD.bazel
@@ -12,8 +12,8 @@ go_library(
         "//pkg/blobstore/configuration:go_default_library",
         "//pkg/builder:go_default_library",
         "//pkg/cas:go_default_library",
+        "//pkg/global:go_default_library",
         "//pkg/grpc:go_default_library",
-        "//pkg/opencensus:go_default_library",
         "//pkg/proto/configuration/bb_storage:go_default_library",
         "//pkg/util:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
