--- a/pkg/proto/configuration/bb_replicator/BUILD.bazel
+++ b/pkg/proto/configuration/bb_replicator/BUILD.bazel
@@ -15,6 +15,7 @@ proto_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/proto/configuration/blobstore:blobstore_proto",
+        "//pkg/proto/configuration/global:global_proto",
         "//pkg/proto/configuration/grpc:grpc_proto",
     ],
 )
@@ -26,6 +27,7 @@ go_proto_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/proto/configuration/blobstore:go_default_library",
+        "//pkg/proto/configuration/global:go_default_library",
         "//pkg/proto/configuration/grpc:go_default_library",
     ],
 )
