--- a/pkg/proto/configuration/bb_storage/BUILD.bazel
+++ b/pkg/proto/configuration/bb_storage/BUILD.bazel
@@ -8,18 +8,19 @@ proto_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/proto/configuration/blobstore:blobstore_proto",
+        "//pkg/proto/configuration/global:global_proto",
         "//pkg/proto/configuration/grpc:grpc_proto",
     ],
 )
 
 go_proto_library(
     name = "bb_storage_go_proto",
-    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
     importpath = "github.com/buildbarn/bb-storage/pkg/proto/configuration/bb_storage",
     proto = ":bb_storage_proto",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/proto/configuration/blobstore:go_default_library",
+        "//pkg/proto/configuration/global:go_default_library",
         "//pkg/proto/configuration/grpc:go_default_library",
     ],
 )
