--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -169,5 +169,6 @@ go_library(
         "@go_googleapis//google/longrunning:longrunning_go_proto",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//metadata:go_default_library",
+        "@org_golang_x_sys//unix:go_default_library",
     ],
 )
