WIP: Add a persistent DigestLocationMap
Adds a persistent digest-location map, works pretty much the same way as
the in-memory one. As the "cuckoo" hashing approach of the keys mean
that we end up with an integral key, we may simply use this to define an
offset in a file, that is

    offset = key * serialised object width

I've made this state directory configurable, and only be created if this
is set. I'm not particularly happy with this, and I'd like advice on a
better way to specify this.

--- a/pkg/blobstore/local/BUILD.bazel
+++ b/pkg/blobstore/local/BUILD.bazel
@@ -12,6 +12,7 @@ go_library(
         "location.go",
         "location_record_array.go",
         "location_record_key.go",
+        "on_disk_location_record_array.go",
         "partitioning_block_allocator.go",
         "per_instance_digest_location_map.go",
     ],
@@ -22,6 +23,7 @@ go_library(
         "//pkg/blobstore/buffer:go_default_library",
         "//pkg/blockdevice:go_default_library",
         "//pkg/digest:go_default_library",
+        "//pkg/filesystem:go_default_library",
         "@com_github_prometheus_client_golang//prometheus:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
