Enforce the use of TLS>=1.2 and allow ciphers to be configurable
The default TLS client/server policy for Go is a bit conservative, in
that it still allows TLS 1.0 and 1.1 to be used in combination with some
deprecated ciphers.

In our case it's safe to use TLS>=1.2, because there likely doesn't
exist a single tool out there that speaks REv2, but only uses TLS 1.0 or
1.1. While there, make the TLS cipher suite configurable as well.

--- a/pkg/util/BUILD.bazel
+++ b/pkg/util/BUILD.bazel
@@ -27,7 +27,15 @@ go_library(
 
 go_test(
     name = "go_default_test",
-    srcs = ["buckets_test.go"],
+    srcs = [
+        "buckets_test.go",
+        "tls_test.go",
+    ],
     embed = [":go_default_library"],
-    deps = ["@com_github_stretchr_testify//require:go_default_library"],
+    deps = [
+        "//pkg/proto/configuration/tls:go_default_library",
+        "@com_github_stretchr_testify//require:go_default_library",
+        "@org_golang_google_grpc//codes:go_default_library",
+        "@org_golang_google_grpc//status:go_default_library",
+    ],
 )
