Don't store the empty blob explicitly
The REv2 spec has been extended to mention that clients never need to
upload the empty blob. They can assume that this blob is always present.

This change adds a decorator for BlobAccess that is automatically added
that intercepts Get(), Put() and FindMissing() calls for empty blobs.
This makes all Buildbarn components behave similarly to Bazel.

Fixes: #56

--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
         "cas_storage_type.go",
         "cloud_blob_access.go",
         "content_addressable_storage_blob_access.go",
+        "empty_blob_injecting_blob_access.go",
         "error_blob_access.go",
         "existence_caching_blob_access.go",
         "metrics_blob_access.go",
@@ -42,6 +43,7 @@ go_library(
 go_test(
     name = "go_default_test",
     srcs = [
+        "empty_blob_injecting_blob_access_test.go",
         "existence_caching_blob_access_test.go",
         "read_caching_blob_access_test.go",
         "redis_blob_access_test.go",
