Add an option to disable checksum validation for LocalBlobAccess
For use cases where a block device backed LocalBlobAccess is used to
perform many tiny writes at random offsets, CPU usage is largely
dominated by checksumming. This is because LocalBlobAccess will validate
the integrity of the entire file for every read.

To make such use cases supported, add a special implementation of Buffer
for filesystem.FileReader that doesn't perform any checksum validation.
This obviously comes at the cost of not being able to detect data
corruption. It is up to the user to determine whether that is
acceptable.

--- a/pkg/blobstore/buffer/BUILD.bazel
+++ b/pkg/blobstore/buffer/BUILD.bazel
@@ -26,6 +26,7 @@ go_library(
         "reader_backed_chunk_reader.go",
         "repair_strategy.go",
         "validated_byte_slice_buffer.go",
+        "validated_file_reader_buffer.go",
         "with_background_task.go",
         "with_error_handler.go",
     ],
@@ -33,6 +34,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/digest:go_default_library",
+        "//pkg/filesystem:go_default_library",
         "//pkg/util:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@com_github_golang_protobuf//proto:go_default_library",
@@ -53,6 +55,7 @@ go_test(
         "new_cas_buffer_from_chunk_reader_test.go",
         "new_cas_buffer_from_reader_test.go",
         "new_validated_buffer_from_byte_slice_test.go",
+        "new_validated_buffer_from_file_reader_test.go",
         "with_background_task_test.go",
         "with_error_handler_test.go",
     ],
