--- a/pkg/blobstore/configuration/BUILD.bazel
+++ b/pkg/blobstore/configuration/BUILD.bazel
@@ -5,8 +5,6 @@ go_library(
     srcs = [
         "create_blob_access.go",
         "create_blob_replicator.go",
-        "memory_map_block_device_disabled.go",
-        "memory_map_block_device_linux.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/blobstore/configuration",
     visibility = ["//visibility:public"],
@@ -17,6 +15,7 @@ go_library(
         "//pkg/blobstore/local:go_default_library",
         "//pkg/blobstore/mirrored:go_default_library",
         "//pkg/blobstore/sharding:go_default_library",
+        "//pkg/blockdevice:go_default_library",
         "//pkg/cas:go_default_library",
         "//pkg/clock:go_default_library",
         "//pkg/digest:go_default_library",
@@ -42,13 +41,5 @@ go_library(
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
         "@org_golang_x_oauth2//google:go_default_library",
-    ] + select({
-        "@io_bazel_rules_go//go/platform:android": [
-            "@org_golang_x_sys//unix:go_default_library",
-        ],
-        "@io_bazel_rules_go//go/platform:linux": [
-            "@org_golang_x_sys//unix:go_default_library",
-        ],
-        "//conditions:default": [],
-    }),
+    ],
 )
