--- a/pkg/blobstore/local/BUILD.bazel
+++ b/pkg/blobstore/local/BUILD.bazel
@@ -20,6 +20,7 @@ go_library(
     deps = [
         "//pkg/blobstore:go_default_library",
         "//pkg/blobstore/buffer:go_default_library",
+        "//pkg/blockdevice:go_default_library",
         "//pkg/digest:go_default_library",
         "@com_github_prometheus_client_golang//prometheus:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
