JWT Authenticator support
Squashed commits:

- style fix

- style fixes

- code review comments

- code review updates

- still doesn't compile

- put back vendored jose-util functions

- avoid some uses of fmt.Sprintf

- update string

- use util.StatusWrapWithCode

- handle multiple headers

- fmt

- checkpoint

- checkpoint after rebase

- fix patch

- checkpoint after rebase

--- a/pkg/grpc/BUILD.bazel
+++ b/pkg/grpc/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
         "client_factory.go",
         "deduplicating_client_factory.go",
         "deny_authenticator.go",
+        "jwt_authenticator.go",
         "lazy_client_dialer.go",
         "metadata_adding_interceptor.go",
         "metadata_forwarding_and_reusing_interceptor.go",
@@ -31,6 +32,8 @@ go_library(
         "@com_github_golang_protobuf//proto:go_default_library",
         "@com_github_golang_protobuf//ptypes:go_default_library_gen",
         "@com_github_grpc_ecosystem_go_grpc_prometheus//:go-grpc-prometheus",
+        "@in_gopkg_square_go_jose_v2//:go-jose_v2",
+        "@in_gopkg_square_go_jose_v2//jwt",
         "@io_opencensus_go//plugin/ocgrpc",
         "@io_opencensus_go//trace",
         "@org_golang_google_grpc//:go_default_library",
@@ -55,6 +58,7 @@ go_test(
         "any_authenticator_test.go",
         "deduplicating_client_factory_test.go",
         "deny_authenticator_test.go",
+        "jwt_authenticator_test.go",
         "lazy_client_dialer_test.go",
         "metadata_adding_interceptor_test.go",
         "metadata_forwarding_and_reusing_interceptor_test.go",
@@ -68,6 +72,10 @@ go_test(
         "//pkg/testutil",
         "@com_github_golang_mock//gomock",
         "@com_github_stretchr_testify//require",
+        "//pkg/proto/configuration/grpc",
+        "@com_github_golang_mock//gomock",
+        "@in_gopkg_square_go_jose_v2//:",
+        "@in_gopkg_square_go_jose_v2//jwt:",
         "@io_bazel_rules_go//proto/wkt:empty_go_proto",
         "@org_golang_google_grpc//:go_default_library",
         "@org_golang_google_grpc//codes",
