Add support for metadata in gRPC client configuration

--- a/pkg/grpc/BUILD.bazel
+++ b/pkg/grpc/BUILD.bazel
@@ -3,6 +3,7 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 go_library(
     name = "go_default_library",
     srcs = [
+        "add_metadata_interceptor.go",
         "allow_authenticator.go",
         "any_authenticator.go",
         "authenticator.go",
@@ -37,6 +38,7 @@ go_library(
 go_test(
     name = "go_default_test",
     srcs = [
+        "add_metadata_interceptor_test.go",
         "allow_authenticator_test.go",
         "any_authenticator_test.go",
         "deny_authenticator_test.go",
