--- a/.github/workflows/pull-requests.yaml
+++ b/.github/workflows/pull-requests.yaml
@@ -29,3 +29,5 @@ jobs:
       run: bazel test --platforms=@io_bazel_rules_go//go/toolchain:linux_amd64 //...
     - name: macOS build
       run: bazel build --platforms=@io_bazel_rules_go//go/toolchain:darwin_amd64 //...
+    - name: FreeBSD build
+      run: bazel build --platforms=@io_bazel_rules_go//go/toolchain:freebsd_amd64 //cmd/bb_storage //cmd/bb_replicator
