--- a/pkg/blockdevice/BUILD.bazel
+++ b/pkg/blockdevice/BUILD.bazel
@@ -17,6 +17,10 @@ go_library(
             "@org_golang_google_grpc//codes:go_default_library",
             "@org_golang_google_grpc//status:go_default_library",
         ],
+        "@io_bazel_rules_go//go/platform:freebsd": [
+            "@org_golang_google_grpc//codes:go_default_library",
+            "@org_golang_google_grpc//status:go_default_library",
+        ],
         "@io_bazel_rules_go//go/platform:ios": [
             "@org_golang_google_grpc//codes:go_default_library",
             "@org_golang_google_grpc//status:go_default_library",
