--- a/pkg/filesystem/BUILD.bazel
+++ b/pkg/filesystem/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
         "file_info.go",
         "local_directory.go",
         "local_directory_darwin.go",
+        "local_directory_freebsd.go",
         "local_directory_linux.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/filesystem",
