Add grpc.ClientFactory to stub out gRPC client creation
This allows us to add a DeduplicatingClientFactory that is responsible
for deduplicating clients that are specified in the configuration. If a
bb-storage node has both a CAS and an AC backend that point to the same
host, it's wasteful to create multiple gRPC clients.

Don't tie grpc.ClientFactory into pkg/blobstore/configuration yet; that
code will need some more cleanups before it's capable of using this
well.

--- a/pkg/grpc/BUILD.bazel
+++ b/pkg/grpc/BUILD.bazel
@@ -7,9 +7,12 @@ go_library(
         "allow_authenticator.go",
         "any_authenticator.go",
         "authenticator.go",
+        "base_client_factory.go",
+        "client_factory.go",
+        "deduplicating_client_factory.go",
         "deny_authenticator.go",
-        "grpc.go",
         "metadata_forwarding_interceptor.go",
+        "server.go",
         "tls_client_certificate_authenticator.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/grpc",
@@ -18,6 +21,7 @@ go_library(
         "//pkg/clock:go_default_library",
         "//pkg/proto/configuration/grpc:go_default_library",
         "//pkg/util:go_default_library",
+        "@com_github_golang_protobuf//proto:go_default_library",
         "@com_github_golang_protobuf//ptypes:go_default_library_gen",
         "@com_github_grpc_ecosystem_go_grpc_prometheus//:go_default_library",
         "@io_opencensus_go//plugin/ocgrpc:go_default_library",
@@ -41,6 +45,7 @@ go_test(
         "add_metadata_interceptor_test.go",
         "allow_authenticator_test.go",
         "any_authenticator_test.go",
+        "deduplicating_client_factory_test.go",
         "deny_authenticator_test.go",
         "metadata_forwarding_interceptor_test.go",
         "tls_client_certificate_authenticator_test.go",
@@ -48,6 +53,7 @@ go_test(
     embed = [":go_default_library"],
     deps = [
         "//internal/mock:go_default_library",
+        "//pkg/proto/configuration/grpc:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
         "@io_bazel_rules_go//proto/wkt:empty_go_proto",
