--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -92,7 +92,10 @@ gomock(
 gomock(
     name = "grpc",
     out = "grpc.go",
-    interfaces = ["Authenticator"],
+    interfaces = [
+        "Authenticator",
+        "ClientFactory",
+    ],
     library = "//pkg/grpc:go_default_library",
     package = "mock",
 )
@@ -101,6 +104,7 @@ gomock(
     name = "grpc_go",
     out = "grpc_go.go",
     interfaces = [
+        "ClientConnInterface",
         "ClientStream",
         "Streamer",
         "UnaryInvoker",
@@ -163,6 +167,7 @@ go_library(
         "//pkg/digest:go_default_library",
         "//pkg/filesystem:go_default_library",
         "//pkg/proto/cas:go_default_library",
+        "//pkg/proto/configuration/grpc:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@com_github_go_redis_redis//:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
