Move all BlobAccess gRPC clients to one central place
This is going to keep the code tidy if we're going to add support for
the Indirect Content Addressable Storage (ICAS). Also use 'CAS' and 'AC'
prefixes in their name, as opposed to writing out
ContentAddressableStorage and ActionCache. This is more consistent with
CASStorageType and ACStorageType.

--- a/pkg/blobstore/configuration/BUILD.bazel
+++ b/pkg/blobstore/configuration/BUILD.bazel
@@ -12,6 +12,7 @@ go_library(
         "//pkg/blobstore:go_default_library",
         "//pkg/blobstore/circular:go_default_library",
         "//pkg/blobstore/completenesschecking:go_default_library",
+        "//pkg/blobstore/grpcclients:go_default_library",
         "//pkg/blobstore/local:go_default_library",
         "//pkg/blobstore/mirrored:go_default_library",
         "//pkg/blobstore/sharding:go_default_library",
