--- a/pkg/blobstore/configuration/BUILD.bazel
+++ b/pkg/blobstore/configuration/BUILD.bazel
@@ -1,10 +1,16 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
     srcs = [
-        "create_blob_access.go",
-        "create_blob_replicator.go",
+        "ac_blob_access_creator.go",
+        "ac_blob_replicator_creator.go",
+        "blob_access_creator.go",
+        "blob_replicator_creator.go",
+        "cas_blob_access_creator.go",
+        "cas_blob_replicator_creator.go",
+        "new_blob_access.go",
+        "new_blob_replicator.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/blobstore/configuration",
     visibility = ["//visibility:public"],
@@ -42,5 +48,17 @@ go_library(
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
         "@org_golang_x_oauth2//google:go_default_library",
+    ],
+)
+
+go_test(
+    name = "go_default_test",
+    srcs = ["blob_access_creator_test.go"],
+    embed = [":go_default_library"],
+    deps = [
+        "//internal/mock:go_default_library",
+        "//pkg/digest:go_default_library",
+        "@com_github_golang_mock//gomock:go_default_library",
+        "@com_github_stretchr_testify//require:go_default_library",
     ],
 )
