--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -10,6 +10,7 @@ go_library(
         "empty_blob_injecting_blob_access.go",
         "error_blob_access.go",
         "existence_caching_blob_access.go",
+        "icas_storage_type.go",
         "metrics_blob_access.go",
         "read_caching_blob_access.go",
         "redis_blob_access.go",
@@ -23,6 +24,7 @@ go_library(
         "//pkg/blobstore/buffer:go_default_library",
         "//pkg/clock:go_default_library",
         "//pkg/digest:go_default_library",
+        "//pkg/proto/icas:go_default_library",
         "//pkg/util:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@com_github_go_redis_redis//:go_default_library",
