--- a/pkg/blobstore/configuration/BUILD.bazel
+++ b/pkg/blobstore/configuration/BUILD.bazel
@@ -9,6 +9,8 @@ go_library(
         "blob_replicator_creator.go",
         "cas_blob_access_creator.go",
         "cas_blob_replicator_creator.go",
+        "icas_blob_access_creator.go",
+        "icas_blob_replicator_creator.go",
         "new_blob_access.go",
         "new_blob_replicator.go",
     ],
