--- a/pkg/blobstore/grpcclients/BUILD.bazel
+++ b/pkg/blobstore/grpcclients/BUILD.bazel
@@ -5,6 +5,7 @@ go_library(
     srcs = [
         "ac_blob_access.go",
         "cas_blob_access.go",
+        "icas_blob_access.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/blobstore/grpcclients",
     visibility = ["//visibility:public"],
@@ -12,6 +13,7 @@ go_library(
         "//pkg/blobstore:go_default_library",
         "//pkg/blobstore/buffer:go_default_library",
         "//pkg/digest:go_default_library",
+        "//pkg/proto/icas:go_default_library",
         "//pkg/util:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@com_github_google_uuid//:go_default_library",
