--- a/pkg/blobstore/grpcservers/BUILD.bazel
+++ b/pkg/blobstore/grpcservers/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
         "action_cache_server.go",
         "byte_stream_server.go",
         "content_addressable_storage_server.go",
+        "indirect_content_addressable_storage_server.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/blobstore/grpcservers",
     visibility = ["//visibility:public"],
@@ -13,6 +14,7 @@ go_library(
         "//pkg/blobstore:go_default_library",
         "//pkg/blobstore/buffer:go_default_library",
         "//pkg/digest:go_default_library",
+        "//pkg/proto/icas:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@go_googleapis//google/bytestream:bytestream_go_proto",
         "@org_golang_google_grpc//codes:go_default_library",
@@ -25,14 +27,17 @@ go_test(
     srcs = [
         "byte_stream_server_test.go",
         "content_addressable_storage_server_test.go",
+        "indirect_content_addressable_storage_server_test.go",
     ],
     embed = [":go_default_library"],
     deps = [
         "//internal/mock:go_default_library",
         "//pkg/blobstore/buffer:go_default_library",
         "//pkg/digest:go_default_library",
+        "//pkg/proto/icas:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
+        "@com_github_golang_protobuf//proto:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
         "@go_googleapis//google/bytestream:bytestream_go_proto",
         "@go_googleapis//google/rpc:status_go_proto",
