--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -17,7 +17,10 @@ gomock(
 gomock(
     name = "blobstore",
     out = "blobstore.go",
-    interfaces = ["BlobAccess"],
+    interfaces = [
+        "BlobAccess",
+        "HTTPClient",
+    ],
     library = "//pkg/blobstore:go_default_library",
     package = "mock",
 )
