--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -14,6 +14,7 @@ go_library(
         "metrics_blob_access.go",
         "read_caching_blob_access.go",
         "redis_blob_access.go",
+        "reference_expanding_blob_access.go",
         "remote_blob_access.go",
         "size_distinguishing_blob_access.go",
         "storage_type.go",
@@ -44,6 +45,7 @@ go_test(
         "existence_caching_blob_access_test.go",
         "read_caching_blob_access_test.go",
         "redis_blob_access_test.go",
+        "reference_expanding_blob_access_test.go",
     ],
     embed = [":go_default_library"],
     deps = [
@@ -51,6 +53,7 @@ go_test(
         "//pkg/blobstore/buffer:go_default_library",
         "//pkg/digest:go_default_library",
         "//pkg/eviction:go_default_library",
+        "//pkg/proto/icas:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
