--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -13,6 +13,7 @@ go_library(
         "icas_storage_type.go",
         "metrics_blob_access.go",
         "read_caching_blob_access.go",
+        "read_fallback_blob_access.go",
         "redis_blob_access.go",
         "reference_expanding_blob_access.go",
         "remote_blob_access.go",
@@ -44,6 +45,7 @@ go_test(
         "empty_blob_injecting_blob_access_test.go",
         "existence_caching_blob_access_test.go",
         "read_caching_blob_access_test.go",
+        "read_fallback_blob_access_test.go",
         "redis_blob_access_test.go",
         "reference_expanding_blob_access_test.go",
     ],
