Allow bb_storage to serve the Indirect Content Addressable Storage (ICAS)
More details:
https://github.com/buildbarn/bb-adrs/blob/master/0004-icas.md

--- a/cmd/bb_storage/BUILD.bazel
+++ b/cmd/bb_storage/BUILD.bazel
@@ -8,12 +8,14 @@ go_library(
     importpath = "github.com/buildbarn/bb-storage/cmd/bb_storage",
     visibility = ["//visibility:private"],
     deps = [
+        "//pkg/blobstore:go_default_library",
         "//pkg/blobstore/configuration:go_default_library",
         "//pkg/blobstore/grpcservers:go_default_library",
         "//pkg/builder:go_default_library",
         "//pkg/global:go_default_library",
         "//pkg/grpc:go_default_library",
         "//pkg/proto/configuration/bb_storage:go_default_library",
+        "//pkg/proto/icas:go_default_library",
         "//pkg/util:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@com_github_gorilla_mux//:go_default_library",
