--- a/cmd/bb_storage/BUILD.bazel
+++ b/cmd/bb_storage/BUILD.bazel
@@ -12,6 +12,7 @@ go_library(
         "//pkg/blobstore/configuration:go_default_library",
         "//pkg/blobstore/grpcservers:go_default_library",
         "//pkg/builder:go_default_library",
+        "//pkg/digest:go_default_library",
         "//pkg/global:go_default_library",
         "//pkg/grpc:go_default_library",
         "//pkg/proto/configuration/bb_storage:go_default_library",
