--- a/pkg/digest/BUILD.bazel
+++ b/pkg/digest/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
         "configuration.go",
         "digest.go",
         "existence_cache.go",
+        "instance_name.go",
         "set.go",
         "set_builder.go",
     ],
@@ -18,6 +19,7 @@ go_library(
         "//pkg/util:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@com_github_golang_protobuf//ptypes:go_default_library_gen",
+        "@com_github_google_uuid//:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
     ],
@@ -28,6 +30,7 @@ go_test(
     srcs = [
         "digest_test.go",
         "existence_cache_test.go",
+        "instance_name_test.go",
         "set_builder_test.go",
         "set_test.go",
     ],
@@ -37,6 +40,7 @@ go_test(
         "//pkg/eviction:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
+        "@com_github_google_uuid//:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
         "@org_golang_google_grpc//status:go_default_library",
