Let ReadCachingBlobAccess use BlobReplicator
ReadCachingBlobAccess currently applies a replication strategy between
the two backends that is identical to what LocalBlobReplicator does. It
takes little effort to also let this use BlobReplicator.

The advantage of using BlobReplicator here is that we can now use all of
the other BlobReplicator implementations as well. For example,
QueuedBlobReplicator can be used to ensure that replication concurrency
remains bounded.

Let's move all BlobReplicator implementations out of
pkg/blobstore/mirrored, as it is no longer specific to
MirroredBlobAccess. Also move ReadCachingBlobAccess in its own package
to prevent cyclic dependencies.

--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -39,6 +39,14 @@ gomock(
 )
 
 gomock(
+    name = "blobstore_replication",
+    out = "blobstore_replication.go",
+    interfaces = ["BlobReplicator"],
+    library = "//pkg/blobstore/replication:go_default_library",
+    package = "mock",
+)
+
+gomock(
     name = "buffer",
     out = "buffer.go",
     interfaces = [
@@ -117,14 +125,6 @@ gomock(
 )
 
 gomock(
-    name = "mirrored",
-    out = "mirrored.go",
-    interfaces = ["BlobReplicator"],
-    library = "//pkg/blobstore/mirrored:go_default_library",
-    package = "mock",
-)
-
-gomock(
     name = "redis",
     out = "redis.go",
     interfaces = ["RedisClient"],
@@ -149,6 +149,7 @@ go_library(
         ":aliases.go",
         ":blobstore.go",
         ":blobstore_local.go",
+        ":blobstore_replication.go",
         ":buffer.go",
         ":builder.go",
         ":cas.go",
@@ -156,7 +157,6 @@ go_library(
         ":filesystem.go",
         ":grpc.go",
         ":grpc_go.go",
-        ":mirrored.go",
         ":redis.go",
         ":remoteexecution.go",
     ],
