--- a/pkg/blobstore/configuration/BUILD.bazel
+++ b/pkg/blobstore/configuration/BUILD.bazel
@@ -29,14 +29,13 @@ go_library(
         "//pkg/blockdevice:go_default_library",
         "//pkg/cas:go_default_library",
         "//pkg/clock:go_default_library",
+        "//pkg/cloud/aws:go_default_library",
         "//pkg/digest:go_default_library",
         "//pkg/filesystem:go_default_library",
         "//pkg/grpc:go_default_library",
         "//pkg/proto/configuration/blobstore:go_default_library",
         "//pkg/util:go_default_library",
-        "@com_github_aws_aws_sdk_go//aws:go_default_library",
-        "@com_github_aws_aws_sdk_go//aws/credentials:go_default_library",
-        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
+        "@com_github_aws_aws_sdk_go//service/s3:go_default_library",
         "@com_github_azure_azure_storage_blob_go//azblob:go_default_library",
         "@com_github_go_redis_redis//:go_default_library",
         "@com_github_golang_protobuf//ptypes:go_default_library_gen",
