--- a/internal/mock/BUILD.bazel
+++ b/internal/mock/BUILD.bazel
@@ -89,6 +89,14 @@ gomock(
 )
 
 gomock(
+    name = "cloud_aws",
+    out = "cloud_aws.go",
+    interfaces = ["S3"],
+    library = "//pkg/cloud/aws:go_default_library",
+    package = "mock",
+)
+
+gomock(
     name = "filesystem",
     out = "filesystem.go",
     interfaces = [
@@ -154,6 +162,7 @@ go_library(
         ":builder.go",
         ":cas.go",
         ":clock.go",
+        ":cloud_aws.go",
         ":filesystem.go",
         ":grpc.go",
         ":grpc_go.go",
@@ -171,6 +180,8 @@ go_library(
         "//pkg/filesystem:go_default_library",
         "//pkg/proto/cas:go_default_library",
         "//pkg/proto/configuration/grpc:go_default_library",
+        "@com_github_aws_aws_sdk_go//aws/request:go_default_library",
+        "@com_github_aws_aws_sdk_go//service/s3:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@com_github_go_redis_redis//:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
