--- a/pkg/blobstore/BUILD.bazel
+++ b/pkg/blobstore/BUILD.bazel
@@ -24,9 +24,12 @@ go_library(
     deps = [
         "//pkg/blobstore/buffer:go_default_library",
         "//pkg/clock:go_default_library",
+        "//pkg/cloud/aws:go_default_library",
         "//pkg/digest:go_default_library",
         "//pkg/proto/icas:go_default_library",
         "//pkg/util:go_default_library",
+        "@com_github_aws_aws_sdk_go//aws:go_default_library",
+        "@com_github_aws_aws_sdk_go//service/s3:go_default_library",
         "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
         "@com_github_go_redis_redis//:go_default_library",
         "@com_github_prometheus_client_golang//prometheus:go_default_library",
@@ -54,6 +57,9 @@ go_test(
         "//pkg/digest:go_default_library",
         "//pkg/eviction:go_default_library",
         "//pkg/proto/icas:go_default_library",
+        "@com_github_aws_aws_sdk_go//aws:go_default_library",
+        "@com_github_aws_aws_sdk_go//aws/awserr:go_default_library",
+        "@com_github_aws_aws_sdk_go//service/s3:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
         "@com_github_stretchr_testify//require:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
