--- a/pkg/global/BUILD.bazel
+++ b/pkg/global/BUILD.bazel
@@ -17,5 +17,6 @@ go_library(
         "@io_opencensus_go//zpages:go_default_library",
         "@io_opencensus_go_contrib_exporter_jaeger//:go_default_library",
         "@io_opencensus_go_contrib_exporter_prometheus//:go_default_library",
+        "@io_opencensus_go_contrib_exporter_stackdriver//:go_default_library",
     ],
 )
